<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_name"
        android:inputType="textCapSentences"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/txt_Cost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/field_cost"
            android:inputType="number"
            android:layout_margin="8dp"/>

        <EditText
            android:id="@+id/txt_Date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:editable="false"
            android:hint="@string/field_date"
            android:inputType="date"
            android:layout_margin="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--<EditText-->
            <!--android:id="@+id/txt_Type"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1"-->
            <!--android:hint="@string/field_type"-->
            <!--android:inputType="text" />-->

        <Spinner
            android:id="@+id/spinner_Type"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="8dp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/txt_Place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_place"
        android:inputType="textCapSentences"
        android:layout_margin="8dp"/>

    <EditText
        android:id="@+id/txt_Comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_comment"
        android:inputType="textCapSentences"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onFinishClicked"
        android:text="@string/action_finish"
        android:layout_margin="8dp"/>

</LinearLayout>