<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_name"
        android:inputType="text" />

    <RadioButton
        android:id="@+id/radio_luxury"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onRadioLuxuryClicked"
        android:text="@string/field_luxury" />

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onFinishClicked"
        android:text="@string/action_finish" />

</LinearLayout>