<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical">

    <EditText
        android:id="@+id/txt_Name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/field_name"
        android:inputType="textCapSentences"
        android:layout_margin="8dp"/>

    <CheckBox
        android:id="@+id/checkbox_luxury"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCheckBoxLuxuryClicked"
        android:text="@string/field_luxury"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onFinishClicked"
        android:text="@string/action_finish"
        android:layout_margin="8dp"/>

</LinearLayout>