<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="16dp"

            android:id="@+id/ll_addPurchase">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_shopping_cart_black_24dp"
                android:scaleType="fitCenter"
                android:layout_weight="0.72"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_addPurchase"
                android:layout_weight="0.2"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/holo_blue_bright"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_list_black_24dp"
                android:scaleType="fitCenter"
                android:layout_weight="0.72"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_viewPurchases"
                android:layout_weight="0.2"
                android:textAlignment="center"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/holo_red_dark"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_timeline_black_24dp"
                android:scaleType="fitCenter"
                android:layout_weight="0.72"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_statistics"
                android:layout_weight="0.2"
                android:textAlignment="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@android:color/darker_gray"
            android:layout_weight="0.5"
            android:orientation="vertical"
            android:layout_margin="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_settings_black_24dp"
                android:scaleType="fitCenter"
                android:layout_weight="0.72"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_settings"
                android:layout_weight="0.2"
                android:textAlignment="center"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>