<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <LinearLayout
            android:id="@+id/ll_addPurchase"
            android:layout_width="0dp"
            android:layout_height="match_parent"

            android:layout_margin="16dp"
            android:layout_weight="0.5"
            android:gravity="center"

            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:scaleType="fitCenter"
                android:background="#FFFFFFFF"
                android:onClick="onAddPurchaseClicked"
                android:src="@drawable/ic_add_shopping_cart_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/activity_addPurchase"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"

            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:scaleType="fitCenter"
                android:background="#FFFFFFFF"
                android:onClick="onViewPurchasesClicked"
                android:src="@drawable/ic_list_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/activity_viewPurchases"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"

            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:background="#FFFFFFFF"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_timeline_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/activity_statistics"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"

            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.72"
                android:scaleType="fitCenter"
                android:background="#FFFFFFFF"
                android:onClick="onSettingsClicked"
                android:src="@drawable/ic_settings_black_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/activity_settings"

                android:textAlignment="center"
                android:textColor="@color/colorPrimaryText"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>